#192 - Add Endpoint to retry failed document actions
