# lambda-api/src/main/java/com/formkiq/stacks/api/handler/DocumentsActionsRetryRequestHandler.java
@@ -1,0 +1,115 @@
+/**
+ * MIT License
+ * 
+ * Copyright (c) 2018 - 2020 FormKiQ
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ * 
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ */
+package com.formkiq.stacks.api.handler;
+
+import static com.formkiq.aws.dynamodb.objects.Objects.throwIfNull;
+import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_OK;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+import com.amazonaws.services.lambda.runtime.LambdaLogger;
+import com.formkiq.aws.dynamodb.model.DocumentItem;
+import com.formkiq.aws.services.lambda.ApiAuthorization;
+import com.formkiq.aws.services.lambda.ApiGatewayRequestEvent;
+import com.formkiq.aws.services.lambda.ApiGatewayRequestEventUtil;
+import com.formkiq.aws.services.lambda.ApiGatewayRequestHandler;
+import com.formkiq.aws.services.lambda.ApiMapResponse;
+import com.formkiq.aws.services.lambda.ApiRequestHandlerResponse;
+import com.formkiq.aws.services.lambda.exceptions.DocumentNotFoundException;
+import com.formkiq.module.actions.Action;
+import com.formkiq.module.actions.ActionStatus;
+import com.formkiq.module.actions.services.ActionsNotificationService;
+import com.formkiq.module.actions.services.ActionsService;
+import com.formkiq.module.lambdaservices.AwsServiceCache;
+import com.formkiq.stacks.dynamodb.DocumentService;
+
+/** {@link ApiGatewayRequestHandler} for "/documents/{documentId}/actions/retry". */
+public class DocumentsActionsRetryRequestHandler
+    implements ApiGatewayRequestHandler, ApiGatewayRequestEventUtil {
+
+  /**
+   * constructor.
+   *
+   */
+  public DocumentsActionsRetryRequestHandler() {}
+
+  private DocumentItem getDocument(final AwsServiceCache awsservice, final String siteId,
+      final String documentId) {
+    DocumentService documentService = awsservice.getExtension(DocumentService.class);
+    DocumentItem item = documentService.findDocument(siteId, documentId);
+    return item;
+  }
+
+  @Override
+  public String getRequestUrl() {
+    return "/documents/{documentId}/actions/retry";
+  }
+
+  @Override
+  public ApiRequestHandlerResponse post(final LambdaLogger logger,
+      final ApiGatewayRequestEvent event, final ApiAuthorization authorization,
+      final AwsServiceCache awsservice) throws Exception {
+
+    String siteId = authorization.siteId();
+    String documentId = event.getPathParameters().get("documentId");
+
+    DocumentItem item = getDocument(awsservice, siteId, documentId);
+    throwIfNull(item, new DocumentNotFoundException(documentId));
+
+    ActionsService service = awsservice.getExtension(ActionsService.class);
+    List<Action> actions = service.getActions(siteId, documentId);
+
+    List<Action> failed = actions.stream().filter(a -> ActionStatus.FAILED.equals(a.status()))
+        .map(a -> a.status(ActionStatus.FAILED_RETRY)).collect(Collectors.toList());
+
+    int idx = actions.size();
+    String userId = authorization.username();
+
+    List<Action> list = new ArrayList<>(failed);
+
+    for (Action action : failed) {
+      Action a = new Action().getFromAttributes(siteId, action.getAttributes(siteId));
+      a.status(ActionStatus.PENDING);
+      a.index("" + idx);
+      a.userId(userId);
+      a.insertedDate(new Date());
+      idx++;
+
+      list.add(a);
+      actions.add(a);
+    }
+
+    service.saveActions(siteId, list);
+
+    ActionsNotificationService notificationService =
+        awsservice.getExtension(ActionsNotificationService.class);
+    notificationService.publishNextActionEvent(actions, siteId, documentId);
+
+    ApiMapResponse resp = new ApiMapResponse();
+    resp.setMap(Map.of("message", "Actions retries"));
+    return new ApiRequestHandlerResponse(SC_OK, resp);
+  }
+}
